z-index fix

--- a/css/main.css
+++ b/css/main.css
@@ -377,6 +377,7 @@ a.finance {
   display: none;
   padding: 15px 15px 12px 15px;
   border-bottom: 1px solid rgb(246,246,246);
+  z-index: 0;
 }
 
 #sidebar-button:active,
